code2/headers_linux.c.error
clang: warning: argument unused during compilation: '-L/opt/homebrew/opt/openssl/lib' [-Wunused-command-line-argument]
clang: warning: argument unused during compilation: '-L/opt/homebrew/opt/boehmgc/lib' [-Wunused-command-line-argument]
clang: warning: argument unused during compilation: '-L/opt/homebrew/opt/zstd/lib' [-Wunused-command-line-argument]
clang: warning: argument unused during compilation: '-L/opt/homebrew/opt/ncurses/lib' [-Wunused-command-line-argument]
headers_linux.c:220:34: error: field has incomplete type 'struct timeval'
  220 | struct itimerval {struct timeval it_interval  ; struct timeval it_value  ; };
      |                                  ^
headers_linux.c:220:26: note: forward declaration of 'struct timeval'
  220 | struct itimerval {struct timeval it_interval  ; struct timeval it_value  ; };
      |                          ^
headers_linux.c:220:64: error: field has incomplete type 'struct timeval'
  220 | struct itimerval {struct timeval it_interval  ; struct timeval it_value  ; };
      |                                                                ^
headers_linux.c:220:26: note: forward declaration of 'struct timeval'
  220 | struct itimerval {struct timeval it_interval  ; struct timeval it_value  ; };
      |                          ^
headers_linux.c:1202:1: warning: typedef requires a name [-Wmissing-declarations]
 1202 | typedef unsigned long  long   ;
      | ^~~~~~~~~~~~~~~~~~~~~~~~~~~
headers_linux.c:1778:186: error: type name requires a specifier or qualifier
 1778 | struct ip_msfilter {unsigned int imsf_multiaddr  ; unsigned int imsf_interface  ; unsigned int imsf_fmode  ; unsigned int imsf_numsrc  ; union { unsigned int imsf_slist[1]  ; struct {  __empty_imsf_slist_flex  ; unsigned int imsf_slist_flex[]  ; }    ; }    ; };
      |                                                                                                                                                                                          ^
1 warning and 3 errors generated.
